Setting up the Work Control

--- a/BillTimeApp/BillTime/BillTime.csproj
+++ b/BillTimeApp/BillTime/BillTime.csproj
@@ -71,6 +71,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\WorkControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -90,6 +94,9 @@
     </Compile>
     <Compile Include="Controls\PaymentsControl.xaml.cs">
       <DependentUpon>PaymentsControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\WorkControl.xaml.cs">
+      <DependentUpon>WorkControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
