Setting the Defaults class

--- a/BillTimeApp/BillTimeLibrary/BillTimeLibrary.csproj
+++ b/BillTimeApp/BillTimeLibrary/BillTimeLibrary.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="DataAccess\DataAccessHelpers.cs" />
     <Compile Include="DataAccess\SqliteDataAccess.cs" />
+    <Compile Include="Models\DefaultsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
