--- a/BillTimeApp/BillTimeLibrary/BillTimeLibrary.csproj
+++ b/BillTimeApp/BillTimeLibrary/BillTimeLibrary.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\ClientModel.cs" />
     <Compile Include="Models\DefaultsModel.cs" />
     <Compile Include="Models\PaymentsModel.cs" />
+    <Compile Include="Models\WorkModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
